# dotfiles

./: .chezmoi.toml.tmpl  .chezmoiencrypt.toml  .chezmoiexternal.toml  .chezmoiexternal.toml.tmpl  .chezmoiignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .tmux.conf  .zprofile  .zshenv  .zshrc  AGENTS.md  Brewfile  CLAUDE.md  Justfile  RALPH_OPENCODE_CHEATSHEET.md  README.md  UPGRADE_NOTES.md  dot_Brewfile  dot_duckdbrc  dot_gitconfig  dot_gitignore_global  dot_ideavimrc  dot_zshenv  mise.toml  pyproject.toml  pyrightconfig.json  skills-lock.json
.chezmoidata/: machines.toml  tools.toml
.chezmoiscripts/: run_after_sync-agents.sh.tmpl  run_after_sync-aws-config.sh  run_after_sync-aws-config.sh.tmpl  run_after_sync-mcp.sh  run_after_sync-mcp.sh.tmpl  run_after_sync-skills.sh.tmpl  run_onchange_install-token-auditor.sh.tmpl
.claude/: settings.local.json
.run/: mcp-sync-all.run.xml  token-auditor-all.run.xml
.serena/: project.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
arch/: setup_arch.sh
aws_config_gen/: README.md  overrides.json  pyproject.toml
aws_config_gen/src/aws_config_gen/: __main__.py  cli.py  config_writer.py  discovery.py  naming.py  sso_client.py  sso_token.py  types.py
aws_config_gen/tests/: conftest.py  test_cli.py  test_config_writer.py  test_discovery.py  test_integration.py  test_naming.py  test_sso_client.py  test_sso_token.py
codax/: README.md  main.py  pyproject.toml
docs/: agents.md  (+4 more)
mcp_sync/: .gitignore  README.md  __init__.py  claude-enabled-plugins.json  pyproject.toml
mcp_sync/examples/: enabled-flag-example.json
mcp_sync/src/mcp_sync/: __init__.py  __main__.py  cli.py  codex_tui.py  skills.py  skills_cli.py  sync.py
mcp_sync/src/mcp_sync/templates/: codex.base.toml  opencode.base.json
mcp_sync/tests/: README.md  conftest.py  test_cli.py  test_enabled_flag.py  test_integration_sync_mcp.py  test_machine_overlay.py  test_skills.py  test_skills_cli.py  test_sync_mcp_configs.py
mcp_sync/tests/test_data/: claude_config_sample.json  malformed_json.json  opencode_config_sample.json  sample_master_config.json
(+262 files in other folders)
