[project]
name = "mcp-sync"
version = "0.2.0"
description = "Sync MCP server configurations across tools."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
sync-mcp-configs = "mcp_sync.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_sync = ["templates/*.json", "templates/*.toml"]
